src/pages/post/post.module.scss
.bannerImage {
  width: 100vw;
  // max-height: 400px;

  margin: 0 auto 5rem;
}

.postContainer {
  header {
    h1 {
      margin-bottom: 1.5rem;

      font-size: 3rem;
      font-weight: bold;
    }

    > div {
      display: flex;
      align-items: center;

      margin-bottom: 1rem;

      time,
      span {
        color: var(--gray-400);
        margin-right: 1.5rem;
      }

      .icon {
        color: var(--gray-400);
        margin-right: 0.5rem;
      }
    }
  }

  em {
    color: var(--gray-400);
  }

  > div {
    margin: 3.75rem 0 0;
    text-align: justify;

    section {
      line-height: 1.5625rem;

      & + section {
        margin-top: 4rem;
      }

      h2 {
        color: var(--gray-100);
        font-weight: bold;
        font-size: 2.25rem;

        margin-bottom: 3rem;
      }

      p,
      ul {
        font-size: 1.125rem;
        color: var(--gray-200);

        margin: 1.5rem 0;

        strong {
          font-size: 1.125rem;
          font-weight: bold;
        }

        a {
          color: var(--highlight);
        }
      }

      ul {
        padding-left: 1.5rem;

        li {
          margin: 0.5rem 0;
        }
      }
    }
  }

  footer {
    margin-top: 3.75em;
    padding-top: 3rem;
    border-top: 1px solid rgba(215, 215, 215, 0.1);

    > div {
      display: flex;
      align-items: center;
      justify-content: space-between;

      & div + div {
        text-align: right;
      }

      p {
        margin-bottom: 0.5rem;

        font-size: 1.125rem;
        color: var(--gray-100);
      }

      a {
        display: block;
        margin-bottom: 5rem;

        font-weight: 600;
        color: var(--highlight);
      }
    }
  }
}

